<resources>
    <string name="app_name">POYH</string>
    <string name="app_title">Put On Your Head</string>
    <string name="app_subtitle">The Ultimate Party Guessing Game</string>
    <string name="btn_play">PLAY</string>
    <string name="btn_settings">SETTINGS</string>
    <string name="title_categories">Choose Category</string>
    <string name="subtitle_categories">Pick a deck to put on your head</string>
    <string name="game_over_title">Game Over!</string>
    <string name="btn_play_again">PLAY AGAIN</string>
    <string name="btn_main_menu">MAIN MENU</string>
</resources>
